# landrop

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  start-dev.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: discovery.rs  main.rs  transfer.rs  types.rs
src/components/: DeviceList.tsx  FileTransfer.tsx  Notifications.tsx  TextTransfer.tsx
